#14 fixed alignment for form choice checkbox

--- a/components/_form-choice.scss
+++ b/components/_form-choice.scss
@@ -24,7 +24,6 @@
 .form-choice__label {
     position: relative;
     display: inline-flex;
-    align-items: center;
     min-height: 1.5rem;
     margin-bottom: 0;
     font-family: $form-choice-font-family;
@@ -37,6 +36,7 @@
         flex: 1 0 1rem;
         width: $form-choice-size;
         height: $form-choice-size;
+        margin-top: 0.3rem;
         margin-right: 0.5rem;
         border: 1px solid $form-choice-border-color;
         background-repeat: no-repeat;
